app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

:root {
  --green: #01da5a;
  --black: #000;
  --white: #fff;
  --gray: #989e9a;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: General Sans, sans-serif;
}

@font-face {
  font-family: "General Sans";
  src: url("GeneralSans.ttf");
}

a {
  color: var(--black);
  text-decoration: none;
}

.user-forms {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 1.5rem;
  gap: 1rem;
  padding: 0 20px;
}

.user-forms h2 {
  font-size: 1.5rem;
  font-weight: 500;
}

.field {
  display: flex;
  flex-direction: column;
  gap: 0.125rem;
}

.field label {
  font-size: 0.875rem;
}

.field input {
  width: 15rem;
  height: 2.625rem;
  padding: 0.625rem 0.5rem;
  border-radius: 0.313rem;
  border: 0.063rem solid var(--gray);
  background: var(--white);
}

.field input[type="email"],
input[type="password"] {
  color: var(--gray);
  font-size: 1rem;
}

::placeholder {
  color: var(--gray);
  font-size: 1rem;
}

.session-links-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

.actions {
  margin-top: 0.5rem;
}

.actions input {
  width: 15rem;
  height: 2.625rem;
  border-radius: 1.25rem;
  border: 0.063rem solid var(--gray);
  color: var(--black);
  font-weight: 500;
  background-color: var(--white);
  font-size: 1rem;
}

.field input:focus {
  outline: none;
  border: 0.063rem solid var(--green);
}

.session-links {
  color: var(--gray);
  text-decoration-line: underline;
}

#re-send {
  background-color: var(--black);
  border: none;
  color: var(--white);
}

@media (min-width: 1024px) {
  body {
    min-height: 100vh;
  }

  .user-forms {
    margin-top: 7.938rem;
  }
}

